# simple-taskipy-case

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: download_dataset.py
